--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express4": "link:@apollo/server/express4"
+    "express4": "link:@apollo/server/express4",
+    "mongoose": "^8.0.2"
   }
 }
