--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   "author": "Sanket Talaviya",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.3.1",
+    "http-status": "^1.7.3",
+    "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express4": "link:@apollo/server/express4",
+    "graphql": "^16.8.1",
     "mongoose": "^8.0.2"
   }
 }
