--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "http-status": "^1.7.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
@@ -29,6 +30,8 @@
     "express": "^4.18.2",
     "express4": "link:@apollo/server/express4",
     "graphql": "^16.8.1",
-    "mongoose": "^8.0.2"
+    "graphql-http": "^1.22.0",
+    "mongoose": "^8.0.2",
+    "validator": "^13.11.0"
   }
 }
