--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a project with typescript, express.js, mongodb & graphql",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "start": "node build/index.js",
     "dev": "tsc-watch --onSuccess \"pnpm start\""
   },
@@ -17,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "dotenv": "^16.3.1",
     "http-status": "^1.7.3",
+    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
